--- a/SourceCode/2024/Feb 2024/Anusha k/Task21/Main.xaml
+++ b/SourceCode/2024/Feb 2024/Anusha k/Task21/Main.xaml
@@ -102,7 +102,7 @@
       <AssemblyReference>UiPath.Workflow</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap2010:Annotation.AnnotationText="" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="668,1699" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap2010:Annotation.AnnotationText="Find the temperature of few cities and print the results into Excel" DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="668,1699" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="sd:DataTable" Name="temp" />
     </Sequence.Variables>
